# kpi-system-monitor

./: .gitignore  CMakeLists.txt  README-Linux.md  README.md  config.json  project-report.md  run-bridge.sh  valeo_project_can.dbc
docs/: EGO_POSE_GAP.md
ios/: Info.plist.in
jetson/: debug_udp_bridge.py
maps/: route_topology_2023.json  square_loop.lanes.json  square_loop.pgm  square_loop.presets.json  square_loop.yaml  straight_road.lanes.json  straight_road.pgm  straight_road.presets.json  straight_road.yaml  testarea_all_wgs84.geojson
qml/: main.qml
qml/kpi/: AccuracyTracker.qml  AxisDot.qml  BigStat.qml  CanStatus.qml  KpiDashboardApp.qml  KpiPanel.qml  KpiTheme.qml  KvCell.qml  LogPanel.qml  MemoryTile.qml  MetricTile.qml  MiniStat.qml  PageDebug.qml  PageKpiValidation.qml  PagePerformance.qml  PageRuns.qml  PageSystem.qml  PageTactical.qml  PageVehicle.qml  Pi5Status.qml  RadarChart.qml  ResourceGraph.qml  SparklineChart.qml  StateDots.qml  SteeringDial.qml  TacticalMap.qml  VelocityArc.qml
src/: CanBridge.cpp  CanBridge.h  Config.cpp  Config.h  DebugLink.cpp  DebugLink.h  I2cImuBridge.cpp  I2cImuBridge.h  KpiData.cpp  KpiData.h  LaneMapModel.cpp  LaneMapModel.h  MapModel.cpp  MapModel.h  RawFrameModel.cpp  RawFrameModel.h  RunRecorder.cpp  RunRecorder.h  SerialGpsBridge.cpp  SerialGpsBridge.h  StateLink.cpp  StateLink.h  WireState.h  main.cpp
